# frostwire

android/: build.gradle
android/jni/: Android.mk  CMakeLists.txt  com_frostwire_android_python_PythonBridge.h  functions.txt  python_bridge.c  python_test.c
android/src/com/frostwire/android/gui/activities/: MainActivity.java
android/src/com/frostwire/android/python/: PythonBridge.java
